@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-11-24T01:19:05Z",
+  "timestamp" : "2024-11-25T01:16:07Z",
   "count_outdated" : 2871,
   "uniques_outdated" : 919,
-  "count" : 2889,
-  "uniques" : 926,
+  "count" : 2890,
+  "uniques" : 927,
   "views" : [
     {
       "timestamp": "2024-11-12T00:00:00Z",
@@ -40,6 +40,15 @@
       "uniques": 2,
       "uniques_minmax": [ 1, 2 ],
       "uniques_decinc": [ 0, 2 ]
+    },
+    {
+      "timestamp": "2024-11-24T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
