@@ -1,6 +1,6 @@
 {
-  "count": 18,
-  "uniques": 7,
+  "count": 19,
+  "uniques": 8,
   "views": [
     {
       "timestamp": "2024-11-12T00:00:00Z",
@@ -21,6 +21,11 @@
       "timestamp": "2024-11-22T00:00:00Z",
       "count": 2,
       "uniques": 2
+    },
+    {
+      "timestamp": "2024-11-24T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
