@@ -1,3 +1,12 @@
+2024-11-25T01:16:07Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/12001404432 # 670
+* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2024-11-25
+* notice: last 14d: unq all: 8 19
+* notice: prev accum: outdated-unq outdated-all / unq all: 919 2871 / 926 2889
+* notice: next accum: outdated-unq outdated-all / unq all: 919 2871 / 927 2890
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2024-11-24]
+
 2024-11-24T01:19:05Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/11991948558 # 668
 * notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2024-11-24
